Dark Mode: Fix WordPress widgets

--- a/assets/dev/scss/direction/editor-dark-mode.scss
+++ b/assets/dev/scss/direction/editor-dark-mode.scss
@@ -1,4 +1,7 @@
 //Variables
+$direction: ltr;
+
+@import "../helpers/direction";
 @import "../helpers/variables";
 
 $theme-dark-gray-darkest: #34383C;
@@ -224,6 +227,10 @@ select {
 				color: $theme-dark-accent;
 			}
 		}
+	}
+
+	.widget-inside {
+		background-color: inherit;
 	}
 
 	//Footer
@@ -562,6 +569,10 @@ $devices: 'desktop', 'tablet', 'mobile';
 .elementor-control-type-tab {
 	background-color: $theme-dark-gray-darkest;
 	border-color: $theme-dark-gray-light;
+
+	&:first-child {
+		@include border-start(1px solid $theme-dark-gray-light);
+	}
 
 	&.elementor-tab-active {
 		background-color: $theme-dark-gray-lighter;
